# sysplayApps

./: .gitignore  README.md  meson.cross
apps/i2c/: meson.build
apps/i2c/src/: i2c_app.cpp
apps/pollApp/: meson.build
apps/pollApp/src/: poll_app.cpp
apps/spi/: meson.build
apps/spi/src/: spi_app.cpp
drivers/i2c/: Makefile  i2c_client.c
drivers/spi/: Makefile  spi_client.c
hiredis-example/: meson.build
hiredis-example/src/: main.cpp
kmod/: Makefile  kernel-threads.c  kernel-threads.ko  mod-synch.ko  ofd.c  poll-wait.c  poll-wait.ko  work-queue.c  work-queue.ko
kmodsynch/: Makefile  mod-synch.c
linux-process/p1/: meson.build
linux-process/p1/src/: main.cpp
linux-process/p2/: meson.build
linux-process/p2/src/: main.cpp
meson-lib/: meson.build
meson-lib/include/: hello.h
meson-lib/src/: Hello.cpp
meson-tutorials/: meson.build  meson.cross
meson-tutorials/src/: main.cpp
zmq/client/: meson.build
zmq/client/src/: zmq-client.cpp
zmq/server/: meson.build
zmq/server/src/: zmq-server.cpp
